# cqwu_achievement_system

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: audit.toml  config.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251216142242_create_sys_user_table.sql  20251218122132_add_role_and_admin_user.sql  20251219034441_create_sys_permission_and_sys_user_permission.sql  20251221003244_create_archive_tbales.sql  20251223105308_create_sys_file.sql  20260321000100_create_task_outbox.sql  20260321003000_alter_task_outbox_for_status_queue.sql  20260402081000_remove_default_seed_admin.sql
scripts/: cleanup_test_db.sh  init_db.sh
scripts/docker/: .env.example  deploy.sh  export-images.sh  import-and-deploy.sh
src/: common.rs  configuration.rs  documentation.rs  documention.rs  domain.rs  lib.rs  main.rs  modules.rs  startup.rs  tasks.rs  telemetry.rs  utils.rs
src/common/: app_state.rs  error.rs  pagination.rs  response.rs
src/domain/: file_metadata.rs  http_method.rs  query_sort.rs  route_registry.rs  schema.rs  user_role.rs
src/middleware/: auth.rs
src/modules/: admin.rs  archive.rs  auth.rs  health_check.rs  routes.rs  user.rs
src/modules/admin/: api_rule.rs  models.rs  routes.rs  service.rs  template.rs  user.rs
src/modules/admin/api_rule/: models.rs  routes.rs  service.rs
src/modules/admin/template/: models.rs  routes.rs  service.rs
src/modules/admin/user/: models.rs  routes.rs  service.rs
src/modules/archive/: models.rs  routes.rs  service.rs
src/modules/auth/: model.rs  models.rs  routes.rs  service.rs
src/modules/routes/: health_check.rs
src/modules/template/: models.rs  routes.rs  service.rs
src/modules/user/: model.rs  models.rs  routes.rs  service.rs
src/tasks/: dispatcher.rs  handler.rs  manager.rs  models.rs  periodic.rs
src/tasks/handler/: command.rs  command_runner.rs  context.rs  default_handler.rs  executable.rs
src/tasks/handler/command/: delete_archive_objects_command.rs
src/tasks/periodic/: outbox_pull.rs  s3_cleanup.rs
src/utils/: jwt.rs  password.rs  redis_cache.rs  s3_storage.rs  schema.rs
tests/api/: admin.rs  archive.rs  auth.rs  health_check.rs  helper.rs  main.rs  s3_reliability.rs  s3_test_support.rs  template.rs  users.rs
tests/api/admin/: api_rule.rs  template.rs  user.rs
