[package]
name = "cqwu_achievement_system"
version = "0.1.0"
edition = "2024"
authors = ["Inkpear <inkpear202413@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1"
thiserror = "2"
config = "0.15"
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"]}
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-actix-web = "0.7"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.9"
tracing-appender = "0.2"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
]

[dev-dependencies]
