[package]
name = "cqwu_achievement_system"
version = "0.1.0"
edition = "2024"
authors = ["Inkpear <inkpear202413@gmail.com>"]

[features]
default = []
swagger = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1"
thiserror = "2"
config = "0.15"
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }
tracing-appender = "0.2"
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", default-features = false, features = [
    "hmac",
    "sha2",
    "rust_crypto",
] }
utoipa = { version = "5", features = [
    "actix_extras",
    "uuid",
    "chrono",
    "debug",
], optional = true }
utoipa-swagger-ui = { version = "8", features = ["actix-web"], optional = true }
regex = "1"
jsonschema = "0.37"
dashmap = "6"
aws-config = "1.8"
aws-sdk-s3 = "1.127.0"
mime_guess = "2"
urlencoding = "2.1"
redis = { version = "0.32", features = ["tokio-comp", "json"] }
deadpool-redis = { version = "0.22", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
    "json",
]

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = "0.9"
